# discovery_wm

./: .gitignore  README.md  actual_num_feedback_breaks.txt  all_flagged_confounds.json  all_subs.txt  feedback_block_rows.txt  observed_num_feedback_breaks.txt  pyproject.toml  pyrightconfig.json  validation_subs.txt
batch/: copy.sbatch  difumo.sbatch  efa.sbatch  fmriprep.sbatch  launch_all_lev1.sbatch  launch_all_lev2.sbatch  launch_all_lev2_old.sbatch  launch_all_outlier_check.sbatch  lev1_model.sbatch  lev2_model_old.sbatch  pull_images.sbatch  setup_env.sh  setup_env_validation.sh  tedana.sbatch  validate.sbatch
batch/quality_control/: run_make_brain_masks.sbatch  run_make_brain_zstat_map_grids.sbatch  run_make_zstat_matrix_heatmaps.sbatch
data/: path_config.json
src/discovery_wm/: __init__.py  utils.py
src/discovery_wm/analysis/: conjunction_old_derivs.py
src/discovery_wm/efa/: efa.py
src/discovery_wm/efa/archive/: archive-efa.py  difumo.py  efa.py
src/discovery_wm/events/: create_events.py  utils.py
src/discovery_wm/glm/: config.py  create_brain_maps.py  create_carpet_plots.py  dual_task_config.py  first_level.py  qa.py  second_level.py
src/discovery_wm/glm/archive/: second_level.py
src/discovery_wm/preprocessing/: add_sidecars.py
src/discovery_wm/quality_control/: check_fd.py  dice.py  find_feedback_breaks.py  make_brain_masks.py  make_brain_zstat_map_grids.py  make_zstat_matrix_heatmaps.py  utils.py
src/discovery_wm/tedana/: 00_check_outputs.py  01_remove_dummy_trs.py  02_denoise_data.py  03_tedana_transform.py  04_prepare_glm_directory.py
tests/: test_main.py
